firmware/build/log/idf_py_stderr_output_49758
CMake Deprecation Warning at /Users/sergeybarabash/robo/esp/v5.4/esp-idf/components/mbedtls/mbedtls/CMakeLists.txt:21 (cmake_minimum_required):
  Compatibility with CMake < 3.10 will be removed from a future version of
  CMake.

  Update the VERSION argument <min> value.  Or, use the <min>...<max> syntax
  to tell CMake that the project requires at least <min> but has been updated
  to work with policies introduced by <max> or earlier.


/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/rmt_pulse_gen.cpp: In member function 'float RmtPulseGenerator::velocityAtPosition(int64_t) const':
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/rmt_pulse_gen.cpp:406:17: warning: unused variable 'decel_start' [-Wunused-variable]
  406 |         int64_t decel_start = profile_.accel_pulses + profile_.cruise_pulses;
      |                 ^~~~~~~~~~~
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/rmt_pulse_gen.cpp: At global scope:
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/rmt_pulse_gen.cpp:503:48: error: ignoring attribute 'section (".iram1.3")' because it conflicts with previous 'section (".iram1.1")' [-Werror=attributes]
  503 | bool IRAM_ATTR RmtPulseGenerator::handleTxDone()
      |                                                ^
In file included from /Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/rmt_pulse_gen.cpp:8:
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/include/rmt_pulse_gen.h:152:20: note: previous declaration here
  152 |     bool IRAM_ATTR handleTxDone();
      |                    ^~~~~~~~~~~~
cc1plus: all warnings being treated as errors
make[2]: *** [esp-idf/pulse_gen/CMakeFiles/__idf_pulse_gen.dir/rmt_pulse_gen.cpp.obj] Error 1
make[1]: *** [esp-idf/pulse_gen/CMakeFiles/__idf_pulse_gen.dir/all] Error 2
make: *** [all] Error 2
